[gd_scene load_steps=7 format=2]

[ext_resource path="res://ui/Window/Window.tscn" type="PackedScene" id=1]
[ext_resource path="res://ui/NagWindow.tscn" type="PackedScene" id=2]
[ext_resource path="res://ui/NagWindow2.gd" type="Script" id=3]
[ext_resource path="res://ui/Chat/minimize_button1.png" type="Texture" id=4]
[ext_resource path="res://ui/Chat/minimize_button3.png" type="Texture" id=5]
[ext_resource path="res://ui/Chat/minimize_button2.png" type="Texture" id=6]

[node name="Window" instance=ExtResource( 1 )]
margin_left = -89.0
margin_right = 89.0
margin_bottom = 105.0
script = ExtResource( 3 )

[node name="VBoxContainer" parent="." index="0"]
margin_right = 177.0

[node name="TitleBar" parent="VBoxContainer" index="0"]
margin_right = 176.0

[node name="Title" parent="VBoxContainer/TitleBar" index="0"]
unique_name_in_owner = true
text = "URGENT MESASGE FROM IVYSLY"

[node name="ShowButton" type="TextureButton" parent="VBoxContainer/TitleBar" index="1"]
unique_name_in_owner = true
anchor_left = 1.0
anchor_right = 1.0
margin_left = -10.0
margin_bottom = 9.0
action_mode = 0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 6 )

[node name="Contents" parent="VBoxContainer" index="1"]
margin_right = 176.0
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/Contents" index="0"]
margin_left = 1.0
margin_top = 1.0
margin_right = 175.0
margin_bottom = 99.0
mouse_filter = 2

[node name="NagWindow" parent="VBoxContainer/Contents/VBoxContainer" index="0" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 0.0
margin_right = 174.0
margin_bottom = 85.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="StoreButton" type="Button" parent="VBoxContainer/Contents/VBoxContainer" index="1"]
unique_name_in_owner = true
margin_top = 86.0
margin_right = 174.0
margin_bottom = 98.0
theme_type_variation = "ChallengeButton"
text = "click button go steam store now"
clip_text = true
icon_align = 1

[node name="LabelBlink" type="Timer" parent="." index="1"]
wait_time = 0.25
autostart = true

[connection signal="timeout" from="LabelBlink" to="." method="_on_LabelBlink_timeout"]
